[package]
authors = ["Jakob Lachermeier", "David Kleingeld"]
description = "A pure rust implementation for the BME680 environmental sensor"
license = "MIT"
name = "bosch-bme680"
categories = ["embedded", "no-std"]
keywords = ["driver", "bme680", "sensor", "no_std"]
repository = "https://github.com/JakobLachermeier/bosch-bme680"
readme = "README.md"
version = "1.0.2"
edition = "2021"

[features]
# thiserror = ["dep:thiserror"]
serde = ["dep:serde"]
# derive's MaxSize on Error enum
postcard = ["dep:postcard"]

[dependencies]
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
defmt = "0.3.6"
bitfield = "0.14"
# thiserror = { version = "1.0.38", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"], optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.10", features = ["embedded-hal-async", "eh1"] }
approx = "0.5.1"
